<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eec8a3"
    android:orientation="vertical"
    tools:context=".CheckoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/amaranth_regular"
        android:gravity="center"
        android:text="@string/premiunTitle"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ivUpgrade"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/premiun_benefit1"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/premiun_benefit2"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/premiun_benefit3"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageView
            android:id="@+id/ivUpgrade"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_above="@id/buUpgrade"
            android:layout_weight="1"
            android:src="@drawable/kings" />

        <Button
            android:id="@+id/buUpgrade"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_prioridad_alta"
            android:text="UPGRADE" />

    </RelativeLayout>
</LinearLayout>