<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lyPremiun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:id="@+id/tvPremiun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_regular"
            android:text="@string/premiun"
            android:background="@color/contrast_data"
            android:textColor="@color/cardview_light_background"
            android:textAlignment="center"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyPremiun"
        android:paddingBottom="20dp"
        tools:ignore="SpeakableTextPresentCheck">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:fontFamily="@font/amaranth_bold"
                android:textSize="26sp"
                android:textColor="@color/regular"
                android:textAlignment="center"
                android:layout_marginTop="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_background_top"
                android:textAlignment="center"
                android:fontFamily="@font/amaranth_bold"
                android:paddingTop="10dp"
                android:text="@string/level"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvLevelNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"

                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_title_bottom"
                android:textAlignment="center"
                android:fontFamily="@font/amaranth_bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center|center"
                android:text="1"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                />
            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:orientation="vertical"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvMoverTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/moves"
                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:background="@drawable/bg_background_top"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/tbMovesData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/moves"
                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:background="@drawable/bg_title_bottom"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!--Elemento para la publicidad-->
    <LinearLayout
        android:id="@+id/lyAdsBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >
    </LinearLayout>
</RelativeLayout>